<resources>
    <string name="app_name">Gestion Recursos</string>
    <string name="tvTitulo1">Gestion Recursos</string>
    <string name="tvVersionAndroidLB">1. Version Android:</string>
    <string name="tvVersionAndroid"></string>
    <string name="tvLight">2. Flashlight:</string>
    <string name="btnOff">Off</string>
    <string name="btnOn">On</string>
    <string name="tvLevelBattery">3. Level of Battery</string>
    <string name="tvLevelBattery_2"></string>
    <string name="tvState">4. Conection:</string>
    <string name="tvConexion"></string>
    <string name="tvTitulo2">Gestion Permisos</string>
    <string name="tvDactilar">Status Permission Fingerprint</string>
    <string name="tvCamera">Status Permission Camera</string>
    <string name="tvEws">Status Permission External Storage</string>
    <string name="tvRs">Status Permission Read Storage</string>
    <string name="tvReadContacts">Status Permission Read Contacts</string>
    <string name="btnCheckPermission">Check Permission</string>
    <string name="btnRequestPermission">Request Permission Camera</string>
    <string name="tvResponse"></string>
    <string name="btnRequestPermissionLocation">Request Permission Location</string>
    <string name="btnRequestPermissionReadStorage">Request Permission Read Storage</string>
    <string name="btnRequestPermissionExternalStorage">Request Permission External Storage</string>
    <string name="btnRequestPermissionReadContacts">Request Read Contacts</string>

</resources>